first step etape 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-
-    <app-header></app-header>
-     <div *ngIf="user.page==1"><app-personal-info></app-personal-info></div>
-     <div *ngIf="user.page==2"><app-select-plan></app-select-plan></div>
-     <div *ngIf="user.page==3"><app-add-ons></app-add-ons></div>
-     <div *ngIf="user.page==4"><app-finishing></app-finishing></div>
-     <app-footer></app-footer>
+<app-etape1></app-etape1>
