--- a/src/app/select-plan/select-plan.component.html
+++ b/src/app/select-plan/select-plan.component.html
@@ -1,1 +1,12 @@
-<p>select-plan works!</p>
+
+<div class="select">
+  <h1>Personal-info</h1>
+  <span>Please provide your name, email adress, and phone number.</span>
+  <label for="name">Name:</label>
+  <input type="text" id="name" required [(ngModel)]="user.name" placeholder="name">
+  <label for="email">Email Address:</label>
+  <input type="email" id="email" required>
+  <label for="phone">Phone Number:</label>
+  <input type="tel" id="phone" required>
+  </div>
+
