--- a/src/app/etape2/etape2.component.html
+++ b/src/app/etape2/etape2.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
 <app-footer></app-footer>
-<app-personal-info></app-personal-info>
+<app-select-plan></app-select-plan>
 <app-next-step></app-next-step>
-<router-outlet></router-outlet>
