--- a/src/app/add-ons/add-ons.component.html
+++ b/src/app/add-ons/add-ons.component.html
@@ -1,1 +1,35 @@
-<p>add-ons works!</p>
+
+<div class="select">
+  <h1>Pick add-ons</h1>
+  <span>Add-ons help enhance your gaming experience</span>
+ <div class="arcade">
+    <div class="square">
+    </div>
+    <div class="plan-tarif">
+      <span class="title"><b>Online service</b></span>
+      <span>Access to multiplayer games</span>
+    </div>
+    <div class="price">+$1/mo</div>
+    </div>
+
+  <div class="arcade">
+    <div class="square">
+
+    </div>
+    <div class="plan-tarif">
+      <span class="title"><b>Larger storage</b></span>
+      <span>Extra 1TB of cloud save</span>
+    </div>
+    <div class="price">+$2/mo</div>
+  </div>
+  <div class="arcade">
+    <div class="square">
+
+    </div>
+    <div class="plan-tarif">
+      <span class="title"><b>Customizable profile</b></span>
+      <span>Custom theme on your profile</span>
+    </div>
+    <div class="price">+$2/mo</div>
+  </div>
+    </div>
