--- a/src/app/finishing/finishing.component.html
+++ b/src/app/finishing/finishing.component.html
@@ -1,1 +1,16 @@
-<p>finishing works!</p>
+
+<div class="select">
+  <h1>Finishing up</h1>
+  <span>Double-check everything looks OK before confirming</span>
+ <div class="arcade">
+    <div class="square">
+    </div>
+    <div class="plan-tarif">
+      <span class="title"><b>Online service</b></span>
+      <span>Access to multiplayer games</span>
+    </div>
+    <div class="price">+$1/mo</div>
+    </div>
+
+  
+    </div>
