--- a/src/app/etape1/etape1.component.html
+++ b/src/app/etape1/etape1.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div class="un">1</div>
 <app-footer></app-footer>
 <app-personal-info></app-personal-info>
 <app-next-step></app-next-step>
