--- a/src/app/numero-page/numero-page.component.css
+++ b/src/app/numero-page/numero-page.component.css
@@ -2,8 +2,8 @@
   display:flex;
   position: fixed;
   top: 20px;
-  left: 70px;
-  width:70%;
+  left: 25%;
+  width:50%;
   height: 50px;
   align-items: center;
   justify-content: space-around;
