--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,7 +1,7 @@
 
 <div class="infos">
   <h1>Personal-info</h1>
-  <span>Please provide your name, email adress, and phone number.</span>
+  <span><h3>provide your name, email adress, and phone number.</h3> </span>
   <label for="name">Name:</label>
   <input type="text" id="name" required [(ngModel)]="user.name" placeholder="name">
   <label for="email">Email Address:</label>
