--- a/src/app/etape2/etape2.component.html
+++ b/src/app/etape2/etape2.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-footer></app-footer>
 <app-select-plan></app-select-plan>
-<app-next-step></app-next-step>
+<app-back2></app-back2>
+<app-next3></app-next3>
