--- a/src/app/etape3/etape3.component.html
+++ b/src/app/etape3/etape3.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-footer></app-footer>
 <app-add-ons></app-add-ons>
-<app-next-step></app-next-step>
+<app-back3></app-back3>
+<app-next4></app-next4>
