--- a/src/app/etape4/etape4.component.html
+++ b/src/app/etape4/etape4.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-footer></app-footer>
 <app-finishing></app-finishing>
+<app-back3></app-back3>
 <app-next-step></app-next-step>
