--- a/src/app/next4/next4.component.css
+++ b/src/app/next4/next4.component.css
@@ -1,5 +1,5 @@
 .next{
-  background-color: rgb(226, 226, 236);
+  background-color: rgb(5, 5, 40);
   color:rgb(139, 195, 215);
   height:40px;
   width:100px;
@@ -9,4 +9,9 @@
   position:fixed;
   right: 10px;
   bottom:15px;
+}
+
+a{
+  text-decoration: none;
+  color:grey;
 }
