--- a/src/app/personal-info/personal-info.component.css
+++ b/src/app/personal-info/personal-info.component.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: 'Ubuntu-Bold';
-  src: url('/src/assets/fonts/Ubuntu-Bold.ttf');
-}
-
-
 .infos{
   font-family: 'Ubuntu-Bold';
   display:flex;
@@ -17,4 +11,22 @@
   width:calc(100% - 80px);
   height:60%;
   border-radius: 10px;
+}
+
+input[type=text] {
+  width: 90%;
+  padding:20px;
+  margin:20px
+}
+
+input[type=email] {
+  width: 90%;
+  padding:20px;
+  margin:20px
+}
+
+input[type=tel] {
+  width: 90%;
+  padding:20px;
+  margin:20px
 }
