--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -5,8 +5,8 @@
   <label for="name">Name:</label>
   <input type="text" id="name" required [(ngModel)]="user.name" placeholder="name">
   <label for="email">Email Address:</label>
-  <input type="email" id="email" required>
+  <input type="email" id="email" required [(ngModel)]="user.email" placeholder="email">
   <label for="phone">Phone Number:</label>
-  <input type="tel" id="phone" required>
+  <input type="tel" id="phone" required [(ngModel)]="user.phone" placeholder="00 00 00 00 00">
   </div>
 
