--- a/src/app/select-plan/select-plan.component.html
+++ b/src/app/select-plan/select-plan.component.html
@@ -32,7 +32,12 @@
 
 <div class="toggle">
   <span>Monthly</span>
-  <div>toggle</div>
+  <div>
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
+  </div>
   <span>Yearly</span>
 </div>
   </div>
