--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body{
   margin: 0;
   padding:0;
-  background-color: rgb(225, 220, 220)
+  background-color: rgb(225, 220, 220);
+  font-family: 'Ubuntu', sans-serif;
   }
