--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -2,11 +2,14 @@
 <div class="infos">
   <h1>Personal-info</h1>
   <span><h3>provide your name, email adress, and phone number.</h3> </span>
-  <label for="name">Name:</label>
-  <input type="text" id="name" required [(ngModel)]="user.name" placeholder="name">
-  <label for="email">Email Address:</label>
-  <input type="email" id="email" required [(ngModel)]="user.email" placeholder="email">
-  <label for="phone">Phone Number:</label>
-  <input type="tel" id="phone" required [(ngModel)]="user.phone" placeholder="00 00 00 00 00">
+   <span>pour test: page:{{user.page}} name: {{user.name}} ok pour page suivante: {{user.okPersonalInfo}} </span>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name"  [(ngModel)]="user.name" placeholder="name" >
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" [(ngModel)]="user.email" placeholder="email">
+    <label for="phone">Phone Number:</label>
+    <input type="tel" id="phone"  [(ngModel)]="user.phone" placeholder="00 00 00 00 00">
+  </form>
   </div>
 
