--- a/src/app/etape1/etape1.component.html
+++ b/src/app/etape1/etape1.component.html
@@ -3,5 +3,5 @@
 <app-footer></app-footer>
 <app-personal-info></app-personal-info>
 <app-next-step></app-next-step>
-<app-next2 *ngIf="this.user.okPersonalInfo"></app-next2>
+<app-next2 *ngIf="myUser.name"></app-next2>
 <router-outlet></router-outlet>
